# silicon

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  SESSION.md  TODO.md  debug.mlir  debug.si  debug2.mlir  debug3.mlir  debug4.mlir  lit.cfg.py  setup.cfg
.github/workflows/: test.yml
cmake/modules/: AddSilicon.cmake
design/: phase-splits.md
docs/: CMakeLists.txt  _index.md  collect.py  getting-started.md  highlight.py  hugo.toml
docs/design/: _index.md  arbiter-example.md  control-flow.md  cross-phase-types.md  inference.md  modules.md  open-questions.md  phase-inference.md  phase-splits.md  state.md  types.md  unified-dialect.md
docs/examples/: _index.md  hello-world.md
docs/hugo/: hugo.toml
docs/internals/: _index.md
docs/language/: _index.md
doodles/: arbiter.si  bit_access.si  const.mlir  debug.mlir  debug.si  dumb_alu.si  find_highest_one.si  flo.si  flo2.si  prio4.si  recursive_popcount.si  tuple.si
include/silicon/: CMakeLists.txt  LLVM.h  MLIR.h  RegisterAll.h
lib/: CMakeLists.txt  RegisterDialects.cpp  RegisterPasses.cpp
lib/Base/: Attributes.cpp  CMakeLists.txt  Dialect.cpp  Types.cpp
lib/Codegen/: CMakeLists.txt  Codegen.cpp  Expression.cpp  Function.cpp  Root.cpp  Statement.cpp  Type.cpp
lib/Conversion/: CMakeLists.txt  HIRToMIR.cpp  MIRToCIRCT.cpp
lib/Dialect/HIR/: CMakeLists.txt  HIRAttributes.cpp  HIRDialect.cpp  HIROps.cpp  HIRTypes.cpp  Utils.h
lib/Dialect/HIR/Transforms/: CMakeLists.txt  EvalConstRegions.cpp  EvalConsts.cpp  InferTypes.cpp
lib/HIR/: Attributes.cpp  CMakeLists.txt  Dialect.cpp  Ops.cpp  Types.cpp  Utils.h
lib/HIR/Analysis/: CMakeLists.txt  PhaseAnalysis.cpp
lib/HIR/Transforms/: CMakeLists.txt  CheckCalls.cpp  CheckTypes.cpp  EvalConsts.cpp  InferTypes.cpp  SpecializeFuncs.cpp  SplitPhases.cpp  TestPhaseAnalysis.cpp
lib/MIR/: Attributes.cpp  CMakeLists.txt  Dialect.cpp  Ops.cpp  Types.cpp
lib/MIR/Transforms/: CMakeLists.txt  Interpret.cpp
lib/Support/: AsmParser.cpp  CMakeLists.txt
lib/Syntax/: AST.cpp  CMakeLists.txt  Lexer.cpp  Names.cpp  Parser.cpp  Tokens.cpp
lib/Transforms/: CMakeLists.txt  Interpret.cpp  PhaseEvalLoop.cpp  SpecializeFuncs.cpp
lib/UIR/: CMakeLists.txt  Dialect.cpp  Ops.cpp
lib/UIR/Analysis/: CMakeLists.txt  PhaseAnalysis.cpp
lib/UIR/Transforms/: CMakeLists.txt  FlattenCF.cpp  SplitPhases2.cpp  TestPhaseAnalysis2.cpp
silicon/: ast.py  codegen.py  consteval.py  diagnostics.py  ir.py  lexer.py  main.py  names.py  opt.py  parser.py  source.py  ty.py
silicon/dialect/: hir.py  util.py
silicon/transforms/: mem2reg.py  unroll.py
test/: CMakeLists.txt  codegen-errors.mlir  codegen-errors.si  codegen.mlir  codegen.si  dialect-errors.mlir  dialect.mlir  ir-errors.si  ir.si  lexer.si  lit.cfg.py  lit.site.cfg.py.in  name-resolution-errors.si  name-resolution.si  parser-errors.si  parser.si  silc.si  typeck-errors.si  typeck.si
test-mlir/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test-mlir/Codegen/: basic.si  signature.mlir
test-mlir/Conversion/: hir-to-mir.mlir
test-mlir/HIR/: basic.mlir  canonicalization.mlir  check-calls-errors.mlir  check-calls.mlir  errors.mlir  split-phases.mlir
test-mlir/MIR/: basic.mlir  canonicalization.mlir
test-mlir/Syntax/: lexer.si  parser.si
test-mlir/Transforms/: specialize-funcs.mlir
test-mlir/tools/: silc.mlir  silicon-opt.mlir
test/Base/: basic.mlir  errors.mlir
test/Codegen/: basic.si  errors.si  signature.si
test/Conversion/: hir-to-mir-errors.mlir  hir-to-mir.mlir  mir-to-circt-errors.mlir  mir-to-circt.mlir
test/EndToEnd/: add-const.si  bitwise.si  const-block.si  deduplication.si  dependent-type-uint-3phase.mlir  dependent-type-uint-add.si  dependent-type-uint-frontend.si  dependent-type-uint-nested.si  dependent-type-uint-unified.mlir  dependent-type-uint.mlir  dependent-type.mlir  double-const.si  duplicate-calls.si  dyn-arg-return.si  dyn-args.si  dyn-fn-call.si  fn-phase-modifiers.si  if-expr.si  mod-basic.si  multi-phase.si  nested-calls.si  operations.si  type-errors.si  unused-args.si
test/HIR/: basic.mlir  canonicalization.mlir  check-calls-dependent-uint.mlir  check-calls-errors.mlir  check-calls.mlir  check-types-errors.mlir  errors.mlir  infer-types.mlir  phase-analysis.mlir  specialize-funcs-cycle.mlir  specialize-funcs-errors.mlir  specialize-funcs.mlir  split-phases-errors.mlir  split-phases.mlir
test/MIR/: basic.mlir  canonicalization.mlir  errors.mlir  interpret-errors.mlir  interpret-max-call-depth.mlir  interpret-max-steps.mlir  interpret.mlir
test/Syntax/: lexer.si  names-error.si  nested-block-comments-error.si  nested-block-comments.si  parser.si
test/Transforms/: interpret.mlir  phase-eval-loop-errors.mlir  phase-eval-loop-max-iterations.mlir  phase-eval-loop.mlir  specialize-funcs.mlir
test/UIR/: basic.mlir  errors.mlir  flatten-cf.mlir  phase-analysis-errors.mlir  phase-analysis.mlir  split-phases2-errors.mlir  split-phases2.mlir
test/codegen/: empty_module.si  expressions.si  ports.si
test/dialect/: hir.mlir  si.mlir
test/parser/: basic.si  empty_module.si  lexer-error-unclosed-multiline-comment.si  lexer-errors.si  lexer.si
test/tools/: end-to-end.si  multi-phase.si  (+2 more)
tools/: CMakeLists.txt
tools/silc/: CMakeLists.txt  silc.cpp
tools/silicon-opt/: CMakeLists.txt  silicon-opt.cpp
(+98 files in other folders)
